rename package per @jnordberg for npm

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "steem-crypto",
+  "name": "@steemit/libcrypto",
   "version": "1.0.0",
   "description": "Common javascript cryptographic utilities. Based on sjcl.",
   "main": "lib/crypto.js",
